# yapd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/yapd/: alloc.h  buffer.h  channels.h  detector.h  gpu.h  gradient.h  matrix.h  nms.h  platform.h  pyramid.h  types.h
private/: CMakeLists.txt  alloc.c  buffer.c  channels.c  color.c  color_consts.py  convolution.c  detector.c  gpu.c  gradient.c  nms.c  pyramid.c  resample.c  xxd.py
private/opencl/: color.cl  convolution.cl  detector.cl  gradient.cl  pyramid.cl  resample.cl
servo/: CMakeLists.txt  cmp.cpp  main.cpp  wby.cpp  wby.h
